# lzw-compression

./: .gitignore  CMakeLists.txt  README.md
include/: constants.h  decode.h  encode.h  input.h  io.h  output.h  path_to_root.h  trie.h
src/: decode.c  encode.c  input.c  io.c  main.c  output.c  path_to_root.c  trie.c
tests/: decode1  decode3  encode1  encode2  encode3
